# badges

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  main.yml  stackoverflow.yml
src/generate_badges/: __init__.py  shields.py
src/generate_badges/conda/: __init__.py  __main__.py  data.py
src/generate_badges/stackoverflow/: __init__.py  __main__.py
src/generate_conda_badges/: __init__.py  __main__.py  data.py  shields.py
